test/should_pass/basic_003.grg
actions basic_003;

rule r {
	pattern {
		if { true; }
	}
	replace {
	}
}

